--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -47,6 +47,9 @@ Samochody poruszają się po drogach w krokach czasowych. Prędkość samochodu 
 \newline
 \newline
 W Systemie można wybrać maksymalne przyspieszenia ujemne oraz dodatnie samochodów z następujących możliwości \{-2, -1, 0, 1, 2\}. Oznacza to, że w następnym stanie pojazd może przyspieszyć o 1 lub 2 odcinki drogi na jeden krok czasowy. Dla wartości 0 pojazd utrzymuje swoją prędkość. Dla wartości ujemnych pojazd zwalnia o 1 lub 2 odcinki drogi na jeden kroku czasowym. Ilość możliwych dla samochodu przyspieszeń znacznie wpływa na złożoność czasową algorytmu, z tego względu, że wraz ze wzrostem ilośći możliwych przyspieszeń rośnie ilość możliwość stanów sąsiednich dla samochodu, przez które algorytm musi przejść.        
+\newline
+\newline
+Do modelu przekazać należy także maksymalną prędkość, którą wszystkie samochody mogą osiągnąć.
 
 \section{Zmodyfikowany algorytm A*}
 
@@ -62,8 +65,6 @@ W przypadku opracowanego rozwiązania, celem jest przekroczenie przez wszystkie 
 Zrealizowany Algorytm A* jest generyczny. Do algorytmu przekazujemy klasę reprezentującą dowolny stan. Klasa musi implementować metodę 'neighbours', która zwraca stany sąsiednie dla danej instancji stanu.
 \newline
 \newline
-\newline
-\newline
 Do algorytmu przekazywana jest także funkcja heurystyki, zależna od danych danego stanu.
 
 \section{Stan w opracowanym rozwiązaniu dla algorytmu A*}
@@ -72,6 +73,22 @@ Stan w modyfikacji algorytmu A* przedstawionej w tej pracy opisuje stan wszystki
 \newline
 \newline
 Zgodnie z wcześniej generycznością wierzchołek jest obiektem klasy, który implementuje metodę 'neighbours'. Metoda generuje wszystkie stany sąsiednie dla aktualnego stanu. Dla przykładu, dla ustawień przyspieszeń \{-2, -1, 0, 1, 2\}, dla każdego z aut na skrzyżowaniu generowane są stany z jego prędkością dodając wartości przyspieszeń. Pomijane są stany, w których prędkość samochodu byłaby ujemna.
+\newline
+\newline
+Przykładowo jest pojazd z prędkością 1 pozycja na krok czasowy znajdujący się na 1 pozycji na drodze numer jeden. Dla pojazdu rozpatrywane są następujące stany:
+\newline
+1) Dodając przyspieszenie o wartości 0: 2 pozycja na drodze numer jeden z prędkością 1
+\newline
+2) Dodając przyspieszenie o wartości 1: 3 pozycja na drodze numer jeden z prędkością 2
+\newline
+3) Dodając przyspieszenie o wartości 2: 4 pozycja na drodze numer jeden z prędkością 3
+\newline
+4) Dodając przyspieszenie o wartości -1: 1 pozycja na drodze numer jeden z prędkością 0
+\newline
+5) Dodając przyspieszenie o wartości -2: Stan jest eliminowany, ponieważ prędkość byłaby ujemna
+\newline
+\newline
+Dodatkowo w przypadku ustawienia maksymalnej prędkości równej 2 pozycje na jeden krok czasowy - możliwość nr 3) także zostałaby wyeliminowana.
 \newline
 \newline
 W metodzie usuwane są także stany powodujące kolizje, co będzie opisane w następnym rozdziale.
@@ -95,6 +112,18 @@ Jeżeli obszary dwóch samochdów na jednym pasie pokrywają się - taki stan je
 \newline
 \newline
 Unikanie kolizji na skrzyżowaniach polega na eliminacji stanów, w których conajmniej dwa auta przekroczyły w jednym kroku czasowym to samo skrzyżowanie. Metoda 'neighbours' także nie zwróci takich stanów.
+\newline
+\newline
+Na rysunku \ref{1-collision-avoidance} przedstawiony jest przykładu unikania kolizji dla dwóch samochodów na prostym skrzyżowaniu. Samochód z numerem jeden przyspieszył o dwie jedostki i zmienił pozycję o dwie jednostki do przodu. Samochód z numerem dwa przyspieszył natomiast o jedną jednostkę i zmienił pozycję o jedną jednostkę do przodu w celu uniknięcia kolizji.
+\newline
+\newline
+W algorytmie usunięty został stan, w którym oba pojazdy przyspieszyły o dwie jednostki. Został natomiast wybrany stan gdzie jeden z samochodów przyspieszył o dwie jednostki, a drugi o jedną jednostką, ponieważ prowadzi to, do najszybszego opuszczenia przez pojazdy skrzyżowania.
+\begin{figure}
+    \includegraphics[width=1.0\textwidth]{collision-avoidance-crossroads.png}
+  \caption{Unikanie kolizji na skrzyżowaniu}
+  \label{1-collision-avoidance}
+\end{figure}
+\newpage
 
 \section{Funkcja heurystyki}
 
