--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -16,7 +16,7 @@ Samochody mogą poruszać się w następujących kierunkach:
 - z zachodu na wschód
 \newline
 \newline
-Powyższe ogarniczenie nie wpływa na algorytm lub wyniki. Dodanie funkcjonalności wymagałoby dodania możliwości zmiany numeru drogi przez samochód, co nie wpływa na liczbę stanów, a co za tym idzie długości wykonywania algorytmu.
+Powyższe ogarniczenie nie wpływa na algorytm lub wyniki. Dodanie funkcjonalności wymagałoby dodania możliwości zmiany numeru drogi przez samochód, co nie wpływa na liczbę stanów, a co za tym idzie długość wykonywania algorytmu.
 \newline
 \newline
 Droga jest reprezentowana poprzez następujące dane:
@@ -111,9 +111,7 @@ Impementacja unikania kolizji pojazdów na tym samym pasie polega na policzeniu 
 Jeżeli obszary dwóch samochdów na jednym pasie pokrywają się - taki stan jest usuwany i wówczas metoda 'neighbours' nie zwróci go jako stanu sąsiedniego.
 \newline
 \newline
-Na rysunku \ref{collision-avoidance-lane} przedstawiony jest przykładu unikania kolizji dla samochodów poruszających się jednym pasem. Przykład przedstawiony jest z parametrem bezpieczeństwa równym jeden.
-\newline
-Jak widać samochody, mając przed sobą inny pojazd, czekają aż będzie dla nich miejsce.
+Na rysunku \ref{collision-avoidance-lane} przedstawiony jest przykładu unikania kolizji dla samochodów poruszających się jednym pasem. Przykład przedstawiony jest z parametrem bezpieczeństwa równym jeden. Samochody, mając przed sobą inny pojazd, czekają aż będzie dla nich miejsce.
 \begin{figure}
     \includegraphics[width=1.0\textwidth]{collision-avoidance-lane.png}
   \caption{Unikani kolizji na pasie}
@@ -138,6 +136,19 @@ W algorytmie usunięty został stan, w którym oba pojazdy przyspieszyły o dwie
 
 Funkcja heurystyki dla algorytmu A* jest to suma kroków czasowych, po których wszystkie auta przekroczą ostatnie skrzyżowanie - czyli osiągną cel. Funkcja liczona jest, przy założeniu, że wszystkie samochody maksymalnie przyspieszają.
 
+\section{Format danych wejściowych}
+
+System koordynacji ruchu potrzebuje dane na temat skrzyżowan, samochodów oraz ograniczeń parametrów samochodów.
+\newline
+\newline
+Skrzyżowania reprezentowane są w pliku CSV posiadającym atrybuty: numer drogi, rozmiar, przecięcia, kierunek. Przecięcie reprezentowane są przez dwie liczby. Na przykład 5 7 - oznacza, że droga przecina drogę o numerze 5 w pozycji 7. Kolejne przecięcia oddzielane są średnikami.
+\newline
+\newline
+Stany samochodów zapisane są w pliku CSV posiadającym atrybuty: numer samochodu, numer drogi samochodu, pozycję na drodze, pozycję końcową.
+\newline
+\newline
+Ograniczenia przechowywane są w osobnym pliku CSV posiadającym atrybuty: maksymalna prędkość, parametr bezpieczeńśtwa, wartości przyspieszeń.
+
 \section{Reprezentacja graficzna wyników}
 
 W celu graficznej reprezentacji wyników zaimplementowany został moduł graficzny.
@@ -158,9 +169,25 @@ Samochody poruszające się po tej samej drodze są zaznaczone grubszym obwodem 
 Kolejne kroki czasowe reprezentowane są poprzez następne grafy z kolejnymi ułożeniami samochodów.
 \newline
 \newline
-Ostatnim elementem modułu graficznego jest stworzenie GIFa z następujących po sobie grafów.
+Efektem końcowym jest stworzony GIF z następujących po sobie grafów przy użyciu biblioteki 'rmagick' dla języka Ruby.
 \newline
 \newline
-%Poniżej na rysunkach \ref{1-traffic} - \ref{12-traffic} jest przedstawione zostało rozwiązanie dla dwunastu pojazdów na skrzyżowaniu ośmiu dróg.
+Moduł graficzny wczytuje wszystkie dane wejściowe: pozycję samochodów, dane skrzyżowania oraz ograniczenia. Kolejno na wejście otrzymuje plik zawierający JSON, który reprezentuje wszystkie stany samochodów na skrzyżowaniach od momentu startu, aż do opuszczenia skrzyżowań przez wszystkie samochody. Plik powstaje w wyniki wykonania zaprezentowanego algorytmu A*.
 \newline
-%Jak widać na rysunku \ref{12-traffic} po dwunastym kroku czasowym wszystkie samochody opóściły skrzyżowanie.
+\newline
+Moduł wczytując dane początkowy tworzy graf bazowy. Graf bazowy przedstawia skrzyżowanie wraz z pojazdami. Kolory dla dróg oraz samochodów są losowane oraz przetrzymywane w zbiorze tak, aby żaden z kolorów się nie powtórzył.
+\newline
+\newline
+Następnie moduł, posiadający kolejne stany w kolejnyc krokach czasowych, korzysta z grafu bazowego i zmienia pozycję samochodów. Po każdym kroku czasowym zapisywane jest zdjęcie grafu z numerem kroku czasowego.
+\newline
+\newline
+W module znajduje się także dodatkowe sprawdzanie kolizji. Jeżeli kolizja wystąpi, w danym kroku czasowym na zdjęciu dodany zostanie napis "Collision". Dzięki temu można zobaczyć prawdopodobieństwo kolizji w przypadku, gdy jeden z pojazdów nie zastosuje się do planu.
+\newline
+\newline
+Na rysunku \ref{graphical-framework} zaprezentowane jest działanie modułu graficznego dla skrzyżowania czterech dróg i ośmiu pojazdów. Na 11 elemencie rysunku widać, że wszystkie samochody opuściły wszystkie skrzyżowania po 11 krokach czasowych.
+\begin{figure}
+    \includegraphics[width=1.0\textwidth]{graphical_module_1.png}
+  \caption{Moduł graficzny}
+  \label{graphical-framework}
+\end{figure}
+\newpage
